# PatientHub

./: .env.example  .gitignore  README.md  characters.json  graph.py  main.ipynb  package-lock.json  pyproject.toml  temp.ipynb
.github/workflows/: docs.yml
assets/: styles.css
backend/: README.md
backend/src/: simulate.py
configs/: create.yaml  evaluate.yaml  generate.yaml  simulate.yaml
configs/client/: clientCast.yaml  consistentMI.yaml  difyTest.yaml  eeyore.yaml  patientPsi.yaml  psyche.yaml  roleplayDoh.yaml  simPatient.yaml
configs/evaluator/: basic.yaml  cbt.yaml  character.yaml
configs/generator/: agent_files.yaml  clientCast.yaml  psyche.yaml  student.yaml
configs/therapist/: CBT.yaml  basic.yaml  eliza.yaml  user.yaml
data/characters/: AdaptiveVP.json  ClientCast.json  ConsistentMI Profile.json  Eeyore Profile Cognitive Model.json  Psyche MFC.json  Psyche.json  SAPS.json  SimPatient.json
data/resources/: AdaptiveVP_stage_direction.json  ClientCast_human_data.json  ClientCast_symptoms.json  psyche_character.json
docs/: SYSTEM_ARCHITECTURE.md  package-lock.json  sidebars.ts
docs/docs/: intro.md
examples/: create.py  evaluate.py  generate.py  interview.py  simulate.py
frontend/: README.md  main.py
frontend/apis/: chat.py
frontend/components/: __init__.py
frontend/data/: seekers.json
frontend/pages/: patient-psi.py
output/: report.md
patienthub/base/: __init__.py  agents.py
patienthub/clients/: SAPS.py  __init__.py  adaptiveVP.py  clientCast.py  consistentMI.py  eeyore.py  psyche.py  simPatient.py
patienthub/configs/: __init__.py  models.py
patienthub/evaluators/: __init__.py  inspect.py  llm_judge.py  rating.py
patienthub/generators/: __init__.py  agent_files.py  clientCast.py  psyche.py
patienthub/npcs/: interviewer.py
patienthub/therapists/: __init__.py
patienthub/utils/: __init__.py  files.py  models.py
src/: agents (old).py  agents.py  main.py  simulate.py  utils.py
src/agents/: __init__.py  base.py  client.py  therapist.py
src/base/: __init__.py  chat.py  inference.py  train.py
src/brain/: __init__.py
src/clients/: __init__.py  basic.py  clientCast.py  consistentMI.py  difyTest.py  eeyore.py  patientPsi.py  psyche.py  roleplayDoh.py  simPatient.py  user.py
src/components/: character.py
src/config/: agents.yaml  patients.json  tasks.yaml  therapists.json
src/configs/: __init__.py  create.yaml  generate.yaml  models.py  register.py  simulate.yaml
src/evaluators/: __init__.py
src/events/: session.py
src/generators/: __init__.py  agent_files.py  character.py  clientCast.py  event.py  psyche.py  student.py
src/memory/: profile.py
(+166 files in other folders)
