[project]
name = "patient-simulation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "appnope==0.1.4",
    "asttokens==3.0.0",
    "attrs==25.4.0",
    "backcall==0.2.0",
    "beautifulsoup4==4.14.2",
    "black>=25.9.0",
    "bleach==6.2.0",
    "certifi==2025.10.5",
    "chainlit>=2.8.3",
    "charset-normalizer==3.4.4",
    "colorama>=0.4.6",
    "decorator==5.2.1",
    "defusedxml==0.7.1",
    "docopt==0.6.2",
    "dotenv>=0.9.9",
    "executing==2.2.1",
    "fastapi[standard]>=0.116.2",
    "fastjsonschema==2.21.2",
    "gradio>=5.49.1",
    "idna==3.11",
    "ipykernel>=7.0.1",
    "ipython==8.12.3",
    "jedi==0.19.2",
    "jinja2>=3.1.6",
    "jsonschema==4.25.1",
    "jsonschema-specifications==2025.9.1",
    "jupyter-client==8.6.3",
    "jupyter-core==5.9.1",
    "jupyterlab-pygments==0.3.0",
    "langchain>=0.3.27",
    "langchain-openai>=0.3.35",
    "langfuse>=3.7.0",
    "langgraph>=0.6.10",
    "langsmith>=0.4.37",
    "markupsafe==3.0.3",
    "matplotlib-inline==0.1.7",
    "mistune==3.1.4",
    "nbclient==0.10.2",
    "nbconvert==7.16.6",
    "nbformat==5.10.4",
    "packaging==25.0",
    "pandocfilters==1.5.1",
    "parso==0.8.5",
    "pexpect==4.9.0",
    "pickleshare==0.7.5",
    "pipreqs==0.5.0",
    "platformdirs==4.5.0",
    "prompt-toolkit==3.0.52",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "pydantic>=2.9",
    "pygments==2.19.2",
    "python-dateutil==2.9.0.post0",
    "pyzmq==27.1.0",
    "referencing==0.37.0",
    "requests==2.32.5",
    "rpds-py==0.27.1",
    "six==1.17.0",
    "soupsieve==2.8",
    "stack-data==0.6.3",
    "streamlit>=1.50.0",
    "tinycss2==1.4.0",
    "tornado==6.5.2",
    "traitlets==5.14.3",
    "typing-extensions==4.15.0",
    "urllib3==2.5.0",
    "watchdog>=6.0.0",
    "wcwidth==0.2.14",
    "webencodings==0.5.1",
    "yarg==0.1.9",
]
